--- a/core/package.json
+++ b/core/package.json
@@ -8,10 +8,10 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "yarn clean && tsc",
-    "format": "prettier --write \\\"src/**/*.ts\\\" \\\"test/**/*.ts\\\"",
+    "format": "prettier --write src/**/*.ts test/**/*.ts",
     "start": "node ./dist/src/main.js",
     "dev": "yarn build && node ./dist/src/main.js",
-    "lint": "eslint \\\"{src,test}/**/*.ts\\\" --fix",
+    "lint": "eslint {src,test}/**/*.ts --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -43,5 +43,12 @@
   "dependencies": {
     "@sentry/core": "^6.19.7",
     "@sentry/node": "^6.19.7"
+  },
+  "devDependencies": {
+    "eslint": "^8.0.1",
+    "jest": "28.0.3",
+    "prettier": "^2.3.2",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.3.5"
   }
 }
