--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts}": [
+    "*.{js,ts,tsx}": [
       "eslint --cache --fix",
       "prettier --write"
     ]
